fixed bug of overlapping divs

--- a/style.css
+++ b/style.css
@@ -4,17 +4,19 @@ body {
     background-size: cover;
     background-position: top;
     font-size: 3.5em;
+    margin: 1%;
 }
 
 .container {
     font-family: 'Caveat', sans-serif;
     color: #aae2e9;
     text-align: center;
+    padding-left: 5%;
 }
 
 #time {
     font-size: 2.5em;
-    margin-top: 5%;
+    margin-top: 10%;
     margin-bottom: 0;
 }
 
@@ -74,11 +76,11 @@ input::placeholder {
 }
 
 .leftPanel{
-    position: fixed;
+    position: absolute;
     top: 10%;
-    left: 1%;
-    width: 100%;
-    height: 100%;
+    left: -0.5%;
+    width: 30%;
+    height: 30%;
     padding: 20px 0;
     transition: all 0.5s ease;
 }
